--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Pokedex",
   "version": "1",
   "author": "Jérémy Potel",
-  "homepage": "https://jpotel38.github.io/pokedex/home",
+  "homepage": "https://jpotel38.github.io/pokedex/",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -38,7 +38,7 @@
     "@angular/compiler": "~11.2.0",
     "@angular/compiler-cli": "~11.2.0",
     "@angular/language-service": "~11.2.0",
-    "@angular/localize": "^11.2.12",
+    "@angular/localize": "^11.2.14",
     "@ionic/angular-toolkit": "^3.1.1",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
@@ -49,7 +49,7 @@
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "30.7.6",
     "eslint-plugin-prefer-arrow": "1.2.2",
-    "jasmine-core": "~3.6.0",
+    "jasmine-core": "^3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "^6.3.4",
     "karma-chrome-launcher": "~3.1.0",
