--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pokedex",
   "version": "1",
   "author": "Jérémy Potel",
-  "homepage": "http://jpotel38.github.io/pokedex/",
+  "homepage": "https://jpotel38.github.io/pokedex/",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
