--- a/angular.json
+++ b/angular.json
@@ -20,16 +20,7 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "assets": [
-              {
-                "glob": "**/*",
-                "input": "src/assets",
-                "output": "assets"
-              },
-              {
-                "glob": "**/*.svg",
-                "input": "node_modules/ionicons/dist/ionicons/svg",
-                "output": "./svg"
-              },
+              "src/favicon.ico",
               "src/assets"
             ],
             "styles": ["src/theme/variables.scss", "src/global.scss"],
