--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@ionic/angular": "^5.5.2",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
+    "acorn-import-assertions": "^1.8.0",
+    "glob-to-regexp": "^0.4.1",
+    "jw-angular-pagination": "^1.2.0",
     "messageformat": "^2.3.0",
     "ngx-translate-messageformat-compiler": "^4.10.0",
     "rxjs": "~6.6.0",
