--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@ngx-translate/http-loader": "^6.0.0",
     "acorn-import-assertions": "^1.8.0",
     "glob-to-regexp": "^0.4.1",
-    "jw-angular-pagination": "^1.2.0",
     "messageformat": "^2.3.0",
     "ngx-translate-messageformat-compiler": "^4.10.0",
     "rxjs": "~6.6.0",
@@ -32,7 +31,7 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.4",
+    "@angular-devkit/build-angular": "^13.3.5",
     "@angular-eslint/builder": "2.0.2",
     "@angular-eslint/eslint-plugin": "2.0.2",
     "@angular-eslint/eslint-plugin-template": "2.0.2",
@@ -42,7 +41,7 @@
     "@angular/compiler-cli": "~11.2.0",
     "@angular/language-service": "~11.2.0",
     "@angular/localize": "^11.2.14",
-    "@ionic/angular-toolkit": "^3.1.1",
+    "@ionic/angular-toolkit": "^6.1.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
