--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-eslint/eslint-plugin": "^13.2.1",
+    "@angular-eslint/template-parser": "^13.2.1",
     "@angular/common": "~13.3.6",
     "@angular/core": "~13.3.6",
     "@angular/forms": "~13.3.6",
@@ -24,7 +26,9 @@
     "@ngx-translate/http-loader": "^6.0.0",
     "acorn-import-assertions": "^1.8.0",
     "glob-to-regexp": "^0.4.1",
+    "jw-angular-pagination": "^1.2.0",
     "messageformat": "^2.3.0",
+    "ngx-build-plus": "^13.0.1",
     "ngx-translate-messageformat-compiler": "^4.10.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
@@ -57,7 +61,7 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "typescript": "~4.6.4"
+    "typescript": "4.3.5"
   },
   "description": "An Ionic project"
 }
