--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
   "dependencies": {
     "@angular-eslint/eslint-plugin": "^13.2.1",
     "@angular-eslint/template-parser": "^13.2.1",
-    "@angular/common": "~13.3.6",
-    "@angular/core": "~13.3.6",
-    "@angular/forms": "~13.3.6",
-    "@angular/platform-browser": "~13.3.6",
-    "@angular/platform-browser-dynamic": "~13.3.6",
-    "@angular/router": "~13.3.6",
+    "@angular/common": "^14.1.1",
+    "@angular/core": "^14.1.1",
+    "@angular/forms": "^14.1.1",
+    "@angular/platform-browser": "^14.1.1",
+    "@angular/platform-browser-dynamic": "^14.1.1",
+    "@angular/router": "^14.1.1",
     "@ionic/angular": "^6.2.0",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
@@ -35,11 +35,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.1.1",
-    "@angular/cli": "~13.3.5",
-    "@angular/compiler": "~13.3.6",
-    "@angular/compiler-cli": "~13.3.6",
-    "@angular/language-service": "~13.3.6",
-    "@angular/localize": "^13.3.6",
+    "@angular/cli": "^14.1.1",
+    "@angular/compiler": "^14.1.1",
+    "@angular/compiler-cli": "^14.1.1",
+    "@angular/language-service": "^14.1.1",
+    "@angular/localize": "^14.1.1",
     "@ionic/angular-toolkit": "^6.1.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
