--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "acorn-import-assertions": "^1.8.0",
+    "angular-cli-ghpages": "^1.0.3",
     "glob-to-regexp": "^0.4.1",
     "messageformat": "^2.3.0",
     "ngx-build-plus": "^13.0.1",
