--- a/package.json
+++ b/package.json
@@ -21,14 +21,15 @@
     "@angular/platform-browser": "^14.1.1",
     "@angular/platform-browser-dynamic": "^14.1.1",
     "@angular/router": "^14.1.1",
-    "@ionic/angular": "^6.7.5",
+    "@ionic/angular": "^7.2.0",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "acorn-import-assertions": "^1.8.0",
     "angular-cli-ghpages": "^1.0.3",
+    "chokidar": "^3.5.3",
     "glob-to-regexp": "^0.4.1",
     "messageformat": "^2.3.0",
-    "ngx-build-plus": "^13.0.1",
+    "ngx-build-plus": "^11.0.0",
     "ngx-pagination": "^6.0.2",
     "ngx-translate-messageformat-compiler": "^5.1.0",
     "rxjs": "~6.6.0",
@@ -60,7 +61,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
+    "protractor": "^7.0.0",
     "ts-node": "~8.3.0",
     "typescript": "4.6.4"
   },
